# langchainlaw

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTES.md  README.md  collate_config.json  config.example.json  my_batch_records.xlsx  notebook.ipynb  prompts.yaml  prompts_generated_test.yaml  prompts_grouped.yaml  pyproject.toml  sample_prompts.xlsx  setup.cfg
.github/workflows/: linting.yml  pytest.yml
.ipynb_checkpoints/: README-checkpoint.md
data/: prompts.yaml  prompts.yml
langchainlaw/: cache.py  classifier.py  collate.py  generate_prompts.py  langchainlaw.py  prompts.py  test_litellm.py
tests/: config.json  conftest.py  expect_dates_prompt  prompts.yaml  prompts_generated_test.yaml  sample_batch_records.xlsx  sample_prompts.csv  sample_prompts.json  sample_prompts.xlsx  test_cache.py  test_classifier.py  test_prompts.py
tests/input/: 123456789abcdef0.json
tests/output/cache/123456789abcdef0/: dates  deceased  estate  executor  legislation  outcome  parties  will_date  wills
