[tool.poetry]
name = "langchainlaw"
version = "0.1.0"
description = ""
authors = ["Mike Lynch <m.lynch@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
black = "^23.3.0"
openpyxl = "^3.1.2"
litellm = "^1.40.7"

[tool.poetry.scripts]
classify = "langchainlaw.langchainlaw:classify"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
