[tool.poetry]
name = "langchainlaw"
version = "0.1.3"
description = ""
authors = ["Mike Lynch <m.lynch@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.194"
openai = "^0.27.8"
pyyaml = "^6.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
black = "^23.3.0"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"

[tool.poetry.scripts]
classify = "langchainlaw.langchainlaw:cli"
collate = "langchainlaw.collate:collate"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
